--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,6 @@
     "no-unused-vars": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
-    "no-console": "warn"
+    "no-console": "off"
   }
 }
