--- a/.github/workflows/sync-to-azure.yml
+++ b/.github/workflows/sync-to-azure.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Push to Azure DevOps
         run: |
-          git config --global user.email "github-actions@bot.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "yassineouhadi99@gmail.com"
+          git config --global user.name "Yasineert"
 
           git remote add azure https://$AZURE_USERNAME:$AZURE_PAT@dev.azure.com/OTHMANIHASNA/transport-ai/_git/transport-ai
           git push azure --mirror
